--- a/templates/views/Moneyconvertor.hbs
+++ b/templates/views/Moneyconvertor.hbs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css and js/Money convertor.css">
+    <link rel="stylesheet" href="/css and js/Money convertor.css">
     <title>Currency Converter</title>
 </head>
 <body>
@@ -16,7 +16,7 @@
         <button class="add-currency-btn"><i class="fas fa-long-arrow-alt-left"></i>Add Currency</button>
         <ul class="add-currency-list"></ul>
       </div>
-    <script src="css and js/Money convertor.js"></script>
+    <script src="/css and js/Money convertor.js"></script>
 
 </body>
 </html>
